--- a/g.html
+++ b/g.html
@@ -45,23 +45,34 @@
         .navbar-brand img {
             height: 40px;
         }
-        .form-check-input {
-            border-radius: 50%;
+        .navbar-toggler {
+            border: none;
         }
-        input:invalid {
-            border-color: black;
+        .navbar-toggler-icon {
+            background-color: #000;
+            display: block;
+            width: 25px;
+            height: 2px;
+            margin: 5px 0;
+            transition: transform 0.4s;
         }
-        input.invalid-input {
-            border-color: red !important;
+        .navbar-toggler.collapsed .navbar-toggler-icon:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+        .navbar-toggler.collapsed .navbar-toggler-icon:nth-child(3) {
+            transform: rotate(-45deg) translate(5px, -5px);
+        }
+        .navbar-toggler.collapsed .navbar-toggler-icon:nth-child(2) {
+            opacity: 0;
+        }
+        .form-spacing {
+            margin-bottom: 1.5rem;
         }
         footer {
             background-color: #f8f9fa;
             padding: 1rem 0;
             text-align: center;
             margin-top: 2rem;
-        }
-        .offcanvas-body {
-            padding: 1rem;
         }
     </style>
 </head>
@@ -72,31 +83,12 @@
         <a class="navbar-brand" href="#">
             <img src="https://via.placeholder.com/40" alt="Logo"> <!-- Add your logo URL -->
         </a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+        <button class="navbar-toggler" type="button" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
             <span class="navbar-toggler-icon"></span>
         </button>
     </nav>
-
-    <!-- Offcanvas Sidebar (Hamburger Menu) -->
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
-    </div>
 
     <div class="container">
         <div class="row justify-content-center">
@@ -105,22 +97,22 @@
                     <h2 class="mb-4">Loan details</h2>
                     <!-- Bond Calculator Form -->
                     <form id="bondForm" class="mt-4">
-                        <div class="mb-3">
+                        <div class="mb-3 form-spacing">
                             <label for="faceValue" class="form-label">Total Bond Amount (TZS)</label>
                             <input type="text" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
                         </div>
 
-                        <div class="mb-3">
+                        <div class="mb-3 form-spacing">
                             <label for="couponRate" class="form-label">Coupon Rate (%)</label>
                             <input type="number" step="0.01" class="form-control" id="couponRate" placeholder="Enter coupon rate" required>
                         </div>
 
-                        <div class="mb-3">
+                        <div class="mb-3 form-spacing">
                             <label for="yearsToMaturity" class="form-label">Loan Term in Years</label>
                             <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" required>
                         </div>
 
-                        <div class="mb-3">
+                        <div class="mb-3 form-spacing">
                             <label for="paymentFrequency" class="form-label">Coupon Payment Frequency</label>
                             <select class="form-select" id="paymentFrequency" required>
                                 <option value="1">Annually</option>
@@ -145,42 +137,6 @@
         </div>
     </div>
 
-    <!-- Result Modal -->
-    <div class="modal fade" id="resultModal" tabindex="-1" aria-labelledby="resultModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="resultModalLabel">Calculation Result</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <div class="row">
-                        <div class="col-6"><strong>Annual Coupon Payment:</strong></div>
-                        <div class="col-6 text-end"><p id="annualCoupon"></p></div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-6"><strong>Total Interest Earned:</strong></div>
-                        <div class="col-6 text-end"><p id="totalInterest"></p></div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-6"><strong>Total Bond Value:</strong></div>
-                        <div class="col-6 text-end"><p id="totalBondValue"></p></div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <div class="col-6"><strong>Total Future Value:</strong></div>
-                        <div class="col-6 text-end"><p id="totalFutureValue"></p></div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!-- Footer -->
     <footer>
         <p>Bond Calculator &copy; 2024</p>
@@ -191,6 +147,12 @@
 
     <!-- Custom Script -->
     <script>
+        // Animate Hamburger Menu
+        const toggler = document.querySelector('.navbar-toggler');
+        toggler.addEventListener('click', () => {
+            toggler.classList.toggle('collapsed');
+        });
+
         // Format input with commas as the user types in the face value field
         const faceValueInput = document.getElementById('faceValue');
         faceValueInput.addEventListener('input', function() {
