--- a/g.html
+++ b/g.html
@@ -67,6 +67,34 @@
         }
         .form-spacing {
             margin-bottom: 1.5rem;
+            position: relative;
+        }
+        .form-control {
+            position: relative;
+        }
+        .form-control.invalid {
+            border-color: red;
+        }
+        .form-control.valid {
+            border-color: green;
+        }
+        .form-spacing .icon-invalid {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: red;
+            font-size: 1.2rem;
+            display: none;
+        }
+        .form-spacing .icon-valid {
+            position: absolute;
+            right: 10px;
+            top: 50%;
+            transform: translateY(-50%);
+            color: green;
+            font-size: 1.2rem;
+            display: none;
         }
         footer {
             background-color: #f8f9fa;
@@ -100,33 +128,34 @@
                         <div class="mb-3 form-spacing">
                             <label for="faceValue" class="form-label">Total Bond Amount (TZS)</label>
                             <input type="text" class="form-control" id="faceValue" placeholder="Enter bond's face value" required>
+                            <i class="icon-invalid fas fa-exclamation-circle"></i>
+                            <i class="icon-valid fas fa-check-circle"></i>
                         </div>
 
                         <div class="mb-3 form-spacing">
                             <label for="couponRate" class="form-label">Coupon Rate (%)</label>
                             <input type="number" step="0.01" class="form-control" id="couponRate" placeholder="Enter coupon rate" required>
+                            <i class="icon-invalid fas fa-exclamation-circle"></i>
+                            <i class="icon-valid fas fa-check-circle"></i>
                         </div>
 
                         <div class="mb-3 form-spacing">
                             <label for="yearsToMaturity" class="form-label">Loan Term in Years</label>
                             <input type="number" class="form-control" id="yearsToMaturity" placeholder="Enter years to maturity" required>
+                            <i class="icon-invalid fas fa-exclamation-circle"></i>
+                            <i class="icon-valid fas fa-check-circle"></i>
                         </div>
 
                         <div class="mb-3 form-spacing">
                             <label for="paymentFrequency" class="form-label">Coupon Payment Frequency</label>
                             <select class="form-select" id="paymentFrequency" required>
+                                <option value="">Select frequency</option>
                                 <option value="1">Annually</option>
                                 <option value="2">Semi-Annually</option>
                                 <option value="4">Quarterly</option>
                             </select>
-                        </div>
-
-                        <!-- Checkbox example -->
-                        <div class="form-check mb-3">
-                            <input class="form-check-input" type="checkbox" value="" id="initiationFee">
-                            <label class="form-check-label" for="initiationFee">
-                                Include initiation fee in your bond?
-                            </label>
+                            <i class="icon-invalid fas fa-exclamation-circle"></i>
+                            <i class="icon-valid fas fa-check-circle"></i>
                         </div>
 
                         <button type="submit" class="btn btn-primary w-100">Calculate</button>
@@ -144,62 +173,55 @@
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Font Awesome for icons -->
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
     <!-- Custom Script -->
     <script>
-        // Animate Hamburger Menu
-        const toggler = document.querySelector('.navbar-toggler');
-        toggler.addEventListener('click', () => {
-            toggler.classList.toggle('collapsed');
+        // Validate inputs with red border, red exclamation icon, and green border with check icon when valid
+        const form = document.getElementById('bondForm');
+        const inputs = form.querySelectorAll('.form-control, .form-select');
+
+        inputs.forEach(input => {
+            input.addEventListener('input', () => {
+                const iconInvalid = input.parentElement.querySelector('.icon-invalid');
+                const iconValid = input.parentElement.querySelector('.icon-valid');
+
+                if (!input.value || input.validity.patternMismatch || input.validity.typeMismatch) {
+                    input.classList.add('invalid');
+                    input.classList.remove('valid');
+                    iconInvalid.style.display = 'block';
+                    iconValid.style.display = 'none';
+                } else {
+                    input.classList.add('valid');
+                    input.classList.remove('invalid');
+                    iconValid.style.display = 'block';
+                    iconInvalid.style.display = 'none';
+                }
+            });
         });
 
-        // Format input with commas as the user types in the face value field
-        const faceValueInput = document.getElementById('faceValue');
-        faceValueInput.addEventListener('input', function() {
-            let value = this.value.replace(/,/g, '');
-            this.value = new Intl.NumberFormat().format(value);
-        });
-
-        // Form validation without showing error initially
-        document.getElementById('bondForm').addEventListener('submit', function (event) {
+        form.addEventListener('submit', function (event) {
             event.preventDefault();
 
-            let isValid = true;
-            const requiredFields = ['faceValue', 'couponRate', 'yearsToMaturity', 'paymentFrequency'];
-            
-            requiredFields.forEach(id => {
-                const input = document.getElementById(id);
-                if (!input.value) {
-                    input.classList.add('invalid-input');
-                    isValid = false;
+            inputs.forEach(input => {
+                const iconInvalid = input.parentElement.querySelector('.icon-invalid');
+                const iconValid = input.parentElement.querySelector('.icon-valid');
+
+                if (!input.value || input.validity.patternMismatch || input.validity.typeMismatch) {
+                    input.classList.add('invalid');
+                    input.classList.remove('valid');
+                    iconInvalid.style.display = 'block';
+                    iconValid.style.display = 'none';
                 } else {
-                    input.classList.remove('invalid-input');
+                    input.classList.add('valid');
+                    input.classList.remove('invalid');
+                    iconValid.style.display = 'block';
+                    iconInvalid.style.display = 'none';
                 }
             });
 
-            if (!isValid) {
-                return;
-            }
-
-            // Get form values
-            const faceValue = parseFloat(document.getElementById('faceValue').value.replace(/,/g, ''));
-            const couponRate = parseFloat(document.getElementById('couponRate').value);
-            const yearsToMaturity = parseInt(document.getElementById('yearsToMaturity').value);
-            const paymentFrequency = parseInt(document.getElementById('paymentFrequency').value);
-
-            // Perform calculations and show results in the modal
-            const annualCoupon = faceValue * (couponRate / 100);
-            const totalInterest = annualCoupon * yearsToMaturity;
-            const totalBondValue = faceValue + totalInterest;
-            const totalFutureValue = totalBondValue;
-
-            document.getElementById('annualCoupon').textContent = new Intl.NumberFormat().format(annualCoupon);
-            document.getElementById('totalInterest').textContent = new Intl.NumberFormat().format(totalInterest);
-            document.getElementById('totalBondValue').textContent = new Intl.NumberFormat().format(totalBondValue);
-            document.getElementById('totalFutureValue').textContent = new Intl.NumberFormat().format(totalFutureValue);
-
-            // Show modal
-            new bootstrap.Modal(document.getElementById('resultModal')).show();
+            // Additional form validation logic...
         });
     </script>
 
