--- a/temp.html
+++ b/temp.html
@@ -30,17 +30,20 @@
             margin: 5px 0;
             transition: transform 0.4s;
         }
+        .navbar-toggler.collapsed .navbar-toggler-icon:nth-child(1) {
+            transform: rotate(45deg) translate(5px, 5px);
+        }
+        .navbar-toggler.collapsed .navbar-toggler-icon:nth-child(3) {
+            transform: rotate(-45deg) translate(5px, -5px);
+        }
+        .navbar-toggler.collapsed .navbar-toggler-icon:nth-child(2) {
+            opacity: 0;
+        }
         footer {
             background-color: #f8f9fa;
             padding: 1rem 0;
             text-align: center;
             margin-top: 2rem;
-        }
-
-        .navbar h1 {
-            font-size: 1.5rem;
-            margin: 0;
-            font-weight: bold;
         }
     </style>
 </head>
@@ -48,17 +51,16 @@
 
     <!-- Top Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light border-bottom">
-        <div class="container-fluid d-flex justify-content-between align-items-center">
-            <a class="navbar-brand" href="#">
-                <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
-            </a>
-            <h1 class="mx-auto">Safe Bank Plc</h1>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
+        <a class="navbar-brand" href="#">
+            <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
+            <h1>Safe Bank Plc</h1>
+        </a>
+        
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
         <div class="collapse navbar-collapse" id="navbarContent">
             <ul class="navbar-nav ms-auto">
@@ -85,6 +87,15 @@
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Custom Script -->
+    <script>
+        // Animate Hamburger Menu
+        const toggler = document.querySelector('.navbar-toggler');
+        toggler.addEventListener('click', () => {
+            toggler.classList.toggle('collapsed');
+        });
+    </script>
 
 </body>
 </html>
