--- a/temp.html
+++ b/temp.html
@@ -22,22 +22,6 @@
         .navbar-toggler {
             border: none;
         }
-        .navbar-toggler .icon-bar {
-            width: 30px;
-            height: 3px;
-            background-color: #000;
-            margin: 5px 0;
-            transition: all 0.4s;
-        }
-        .navbar-toggler.collapsed .icon-bar:nth-child(1) {
-            transform: rotate(45deg) translate(5px, 5px);
-        }
-        .navbar-toggler.collapsed .icon-bar:nth-child(2) {
-            opacity: 0;
-        }
-        .navbar-toggler.collapsed .icon-bar:nth-child(3) {
-            transform: rotate(-45deg) translate(5px, -5px);
-        }
         footer {
             background-color: #343a40;
             color: #ffffff;
@@ -75,16 +59,14 @@
 <body>
 
     <!-- Top Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-primary border-bottom">
+    <nav class="navbar navbar-expand-lg navbar-light border-bottom">
         <div class="container-fluid d-flex justify-content-between align-items-center">
             <a class="navbar-brand" href="#">
                 <img src="img/logo.png" alt="Logo"> <!-- Add your logo URL -->
             </a>
             <h1 class="mx-auto">Safe Bank Plc</h1>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
+                <span class="navbar-toggler-icon"></span>
             </button>
         </div>
 
@@ -146,14 +128,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Bootstrap Icons CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
-
-    <!-- Custom Script for Hamburger Animation -->
-    <script>
-        const toggler = document.querySelector('.navbar-toggler');
-        toggler.addEventListener('click', () => {
-            toggler.classList.toggle('collapsed');
-        });
-    </script>
 
 </body>
 </html>
