--- a/table.html
+++ b/table.html
@@ -6,6 +6,8 @@
     <title>Bond Calculator</title>
     <!-- Bootstrap 5 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- DataTables CSS -->
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.5/css/jquery.dataTables.min.css">
     <style>
         /* Custom Styling */
         body {
@@ -24,15 +26,6 @@
             color: #ffffff;
             padding: 2rem 0;
             text-align: center;
-        }
-        footer .footer-links a {
-            color: #ffffff;
-            text-decoration: none;
-            margin: 0 10px;
-            font-size: 1rem;
-        }
-        footer .footer-links a:hover {
-            text-decoration: underline;
         }
         footer .social-icons a {
             color: #ffffff;
@@ -114,7 +107,7 @@
     <div class="container my-4">
         <h2 class="text-center">Job Applications</h2>
         <div class="table-responsive">
-            <table class="table table-bordered table-hover">
+            <table id="jobApplicationsTable" class="table table-bordered table-hover">
                 <thead class="table-dark">
                     <tr>
                         <th>#</th>
@@ -167,6 +160,10 @@
 
     <!-- Bootstrap 5 JS and dependencies -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- DataTables JS -->
+    <script src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.min.js"></script>
     <!-- Bootstrap Icons CDN -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.js"></script>
 
@@ -176,6 +173,15 @@
         const toggler = document.querySelector('.navbar-toggler');
         toggler.addEventListener('click', () => {
             toggler.classList.toggle('collapsed');
+        });
+
+        // Initialize DataTable
+        $(document).ready(function() {
+            $('#jobApplicationsTable').DataTable({
+                responsive: true,
+                lengthChange: false,
+                pageLength: 5
+            });
         });
     </script>
 
